syntax = "proto3";

import "AbilitySyncStateInfo.proto";
import "EntityRendererChangedInfo.proto";

option java_package = "org.sorapointa.proto";

message SceneWeaponInfo {
  uint32 entity_id = 1;
  uint32 gadget_id = 2;
  uint32 item_id = 3;
  uint64 guid = 4;
  uint32 level = 5;
  uint32 promote_level = 6;
  AbilitySyncStateInfo ability_info = 7;
  map<uint32, uint32> affix_map = 8;
  EntityRendererChangedInfo renderer_changed_info = 9;
}
